--- a/public/app/list.html
+++ b/public/app/list.html
@@ -93,7 +93,13 @@
                         3Mbit
                       </option>
                       <option>
-                        4Mbit (slow, high quality)
+                        4Mbit
+                      </option>
+                      <option>
+                        6Mbit
+                      </option>
+                      <option>
+                        8Mbit (slow, high quality)
                       </option>
                     </select>
 
