--- a/public/download/index.html
+++ b/public/download/index.html
@@ -36,7 +36,7 @@
 			if (back && back.length) {
 				// sanitize
 				var url = new URL(decodeURIComponent(back));
-				url = new URL(back.pathname + back.search, window.location.origin);
+				url = new URL(url.pathname + url.search, window.location.origin);
 				window.location = back;
 				window.open(dl);
 			}
