manual link, update app

--- a/public/app/list.html
+++ b/public/app/list.html
@@ -261,7 +261,7 @@
           </p>
         </div>
         <p id='not-found'>
-          Android not found? Make sure <a href='https://plus.google.com/110558071969009568835/posts/Bb2wMXVwsQ7' target='_blank'>Android USB Debugging is enabled</a>.
+          Android not found? Make sure <a href='https://support.vysor.io/support/technical/notfound/' target='_blank'>Android USB Debugging is enabled</a>.
         </p>
         <p id='windows'>
           Windows users need <a href='https://adb.clockworkmod.com' target='_blank'>ADB Drivers</a>.
@@ -277,7 +277,7 @@
             <span id='account-management-info'></span><span> </span><a id='account-management' target='_blank'></a>
           </p>
         </div>
-        <div id='desktop-app'><p><a href='https://plus.google.com/110558071969009568835/posts/Ub7QKu2Pddu' target='_blank'>Get the standalone Vysor desktop app for better performance!</a></p></div>
+        <div id='desktop-app'><p><a href='https://vysor.io/download' target='_blank'>Get the standalone Vysor desktop app for better performance!</a></p></div>
       </div>
       <div class='this-pads-the-footer-so-it-scrolls' style='min-height: 50px'></div>
       <div class="navbar navbar-default navbar-fixed-bottom">
@@ -286,10 +286,10 @@
             <p class="navbar-text"><a href="http://www.clockworkmod.com/" target="_blank"><i class='fa fa-home'></i></a></p>
             <p class="navbar-text"><a href="http://twitter.com/vysorapp" target="_blank"><i class='fa fa-twitter'></i></a></p>
             <a class="navbar-text" href="http://dev.vysor.io/" target='_blank'>Developers</a>
-            <a class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/JLuG3yqRdSH" target='_blank'>Support</a>
+            <a class="navbar-text" href="https://support.vysor.io/" target='_blank'>Support</a>
             <a class="navbar-text" href="#" id='bugreport'>Bug Report</a>
             <!-- <a id='tutorial' class="navbar-text" href="#">Tutorial</a> -->
-            <a id='manual' class="navbar-text" href="https://plus.google.com/110558071969009568835/posts/8Ka2hG5acNu" target="_blank">Manual</a>
+            <a id='manual' class="navbar-text" href="https://vysor.io/manual" target="_blank">Manual</a>
             <a id='reload-vysor' class="navbar-text" href='#' name="reload-vysor">Reload Vysor</a>
             <a id='reset-vysor' class="navbar-text" href='#' name="reload-vysor">Reset Vysor</a>
           </div>
