--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -173,7 +173,7 @@
             <h4 class="modal-title">Checkout</h4>
           </div>
           <div class="modal-body">
-            <div>License Account: <span id='purchase-email'></span>.<br/><a href="https://plus.google.com/110558071969009568835/posts/5dWULG7ALmB" target="_blank">Wrong account? Read this.</a><br/><br/></div>
+            <div>License Account: <span id='purchase-email'></span>.<br/><a href="https://support.vysor.io/support/licensing/multiple/" target="_blank">Wrong account? Read this.</a><br/><br/></div>
             <center>
               <p><b>Preferred Checkout</b></p>
               <div>
