--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
           <ul class="nav navbar-nav">
             <li><a href="javascript:openDownload()">Download</a></li>
             <li><a href="/#pricing">Pricing</a></li>
-            <li><a href="https://plus.google.com/110558071969009568835/posts/JLuG3yqRdSH">Support</a></li>
+						<li><a href="https://support.vysor.io/">Support</a></li>
           </ul>
         </div>
       </div>
