--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -133,10 +133,19 @@
     <script src='socket/fetch.js' type='text/javascript'></script>
     <script src='socket/filesocket.js' type='text/javascript'></script>
     <script src='socket/gcmsocket.js' type='text/javascript'></script>
+    <script src='socket/dummysocket.js' type='text/javascript'></script>
+
     <script src='adb/adb-client.js' type='text/javascript'></script>
     <script src='device-settings.js' type='text/javascript'></script>
     <script src='modal.js' type='text/javascript'></script>
-    <script src='socket/dummysocket.js' type='text/javascript'></script>
+
+    <script src='cast/protobuf.min.js' type='text/javascript'></script>
+    <script src='cast/aes.js' type='text/javascript'></script>
+    <script src='cast/rtp.js' type='text/javascript'></script>
+    <script src='cast/cast_message.js' type='text/javascript'></script>
+    <script src='cast/audio_queue.js' type='text/javascript'></script>
+    <script src='cast/cast_server.js' type='text/javascript'></script>
+
     <script src='flash.js' type='text/javascript'></script>
     <script src='screen.js' type='text/javascript'></script>
 
@@ -248,6 +257,21 @@
                 </div>
               </div>
 
+              <div id='audio-settings-container'>
+                <label>Audio Settings</label>
+                <div class='well'>
+                  <label class='hidden'>Size and Density</label>
+                  <select id='display-settings' class="form-control hidden">
+                  </select>
+
+                  <div class="checkbox">
+                    <label>
+                      <input id='dim-display' type="checkbox"> Dim Display while Connected
+                    </label>
+                  </div>
+                </div>
+              </div>
+
               <div id='display-settings-container'>
                 <label>Display Settings</label>
                 <div class='well'>
@@ -268,6 +292,8 @@
                 <div class='well'>
                   <label>Web Video Stream</label>
                   <p><a id='web-video-stream'></a></p>
+                  <label>Web Audio Stream</label>
+                  <p><a id='web-audio-stream'></a></p>
                 </div>
               </div>
             </form>
