--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
   <head>
     <meta charset="utf-8">
     <title>Vysor</title>
@@ -122,37 +122,38 @@
         text-align: center;
       }
     </style>
-    <script src='common/jquery-2.1.1.min.js' type='text/javascript'></script>
-    <script src="bootstrap/js/bootstrap.min.js" type='text/javascript'></script>
+    <script src='common/jquery-2.1.1.min.js'></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="vysor-defaults.js" type='text/javascript'></script>
+    <script src="vysor-defaults.js"></script>
 
-    <script src='util.js' type='text/javascript'></script>
-    <script src='bytebuffer.js' type='text/javascript'></script>
-    <script src='socket/socket.js' type='text/javascript'></script>
-    <script src='socket/fetch.js' type='text/javascript'></script>
-    <script src='socket/filesocket.js' type='text/javascript'></script>
-    <script src='socket/gcmsocket.js' type='text/javascript'></script>
-    <script src='socket/dummysocket.js' type='text/javascript'></script>
+    <script src='util.js'></script>
+    <script src='bytebuffer.js'></script>
+    <script src='socket/socket.js'></script>
+    <script src='socket/fetch.js'></script>
+    <script src='socket/filesocket.js'></script>
+    <script src='socket/gcmsocket.js'></script>
+    <script src='socket/dummysocket.js'></script>
 
-    <script src='adb/adb-client.js' type='text/javascript'></script>
-    <script src='device-settings.js' type='text/javascript'></script>
-    <script src='modal.js' type='text/javascript'></script>
+    <script src='adb/adb-client.js'></script>
+    <script src='device-settings.js'></script>
+    <script src='modal.js'></script>
 
-    <script src='cast/protobuf.min.js' type='text/javascript'></script>
-    <script src='cast/aes.js' type='text/javascript'></script>
-    <script src='cast/rtp.js' type='text/javascript'></script>
-    <script src='cast/cast_message.js' type='text/javascript'></script>
-    <script src='cast/audio_queue.js' type='text/javascript'></script>
-    <script src='cast/cast_server.js' type='text/javascript'></script>
+    <script src='cast/protobuf.min.js'></script>
+    <script src='cast/aes.js'></script>
+    <script src='cast/rtp.js'></script>
+    <script src='cast/cast_message.js'></script>
+    <script src='cast/audio_queue.js'></script>
+    <script src='cast/cast_server.js'></script>
 
-    <script src='flash.js' type='text/javascript'></script>
-    <script src='screen.js' type='text/javascript'></script>
+    <script src='flash.js'></script>
+    <script src='video_decode/pepper.js'></script>
+    <script src='video_decode/common.js'></script>
 
-    <script src='video_decode/common.js' type='text/javascript'></script>
+    <script src='screen.js'></script>
 
     <!-- dirty hack -->
-    <script src='uglify-screen.js' type='text/javascript'></script>
+    <script src='uglify-screen.js'></script>
   </head>
 
   <body>
@@ -257,8 +258,9 @@
                 </div>
               </div>
 
-              <div id='audio-settings-container'>
-                <label>Audio Settings</label>
+
+              <div id='display-settings-container'>
+                <label>Display Settings</label>
                 <div class='well'>
                   <label class='hidden'>Size and Density</label>
                   <select id='display-settings' class="form-control hidden">
@@ -272,16 +274,12 @@
                 </div>
               </div>
 
-              <div id='display-settings-container'>
-                <label>Display Settings</label>
+              <div id='audio-settings-container'>
+                <label>Audio Settings</label>
                 <div class='well'>
-                  <label class='hidden'>Size and Density</label>
-                  <select id='display-settings' class="form-control hidden">
-                  </select>
-
                   <div class="checkbox">
                     <label>
-                      <input id='dim-display' type="checkbox"> Dim Display while Connected
+                      <input id='auto-audio' type="checkbox"> Mute Android and Mirror Audio Automatically
                     </label>
                   </div>
                 </div>
@@ -312,7 +310,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id='modal-title'></h4>
+            <h4 class="modal-title" id='modal-title'>Modal</h4>
           </div>
           <div class="modal-body">
             <p id='modal-body'></p>
