--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -126,6 +126,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
 
     <script src="vysor-defaults.js"></script>
+    <script src='md5.js'></script>
 
     <script src='util.js'></script>
     <script src='bytebuffer.js'></script>
