--- a/public/app/customize.html
+++ b/public/app/customize.html
@@ -5,13 +5,11 @@
     <title>
       Vysor
     </title>
-    <script src='common/jquery-2.1.1.min.js' type="text/javascript">
-</script>
+    <script src='common/jquery-2.1.1.min.js' type="text/javascript"></script>
 
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript">
-</script>
+    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
     <script src='vysor-defaults.js' type="text/javascript"></script>
     <script src='customize.js' type="text/javascript"></script>
