--- a/public/app/list.html
+++ b/public/app/list.html
@@ -13,6 +13,7 @@
 
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
+    <script src="require.js" type="text/javascript"></script>
     <script src='device-settings.js' type="text/javascript"></script>
     <script src='farm-access.js' type="text/javascript"></script>
     <script src='util.js' type="text/javascript"></script>
