--- a/public/app/purchase.html
+++ b/public/app/purchase.html
@@ -9,6 +9,8 @@
     <script src='common/jquery-2.1.1.min.js'></script>
     <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <script src='common/buy.js'></script>
+
+    <script src="require.js" type="text/javascript"></script>
     <script src='util.js'></script>
     <script src='modal.js'></script>
     <script src='purchase.js'></script>
