--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -128,6 +128,7 @@
     <script src="vysor-defaults.js"></script>
     <script src='md5.js'></script>
 
+    <script src="require.js" type="text/javascript"></script>
     <script src='util.js'></script>
     <script src='bytebuffer.js'></script>
     <script src='socket/socket.js'></script>
