--- a/public/app/whitelist.html
+++ b/public/app/whitelist.html
@@ -5,13 +5,13 @@
     <title>
       Vysor
     </title>
-    <script src='common/jquery-2.1.1.min.js' type="text/javascript">
-</script>
+    <script src='common/jquery-2.1.1.min.js' type="text/javascript"></script>
 
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript">
-</script>
+    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+
+    <script src="require.js" type="text/javascript"></script>
     <script src='farm-access.js' type="text/javascript"></script>
     <script src='whitelist.js' type="text/javascript"></script>
     <script src='uglify-whitelist.js' type="text/javascript"></script>
