--- a/public/app/screen.html
+++ b/public/app/screen.html
@@ -149,8 +149,10 @@
     <script src='cast/cast_server.js'></script>
 
     <script src='flash.js'></script>
-    <script src='video_decode/pepper.js'></script>
     <script src='video_decode/common.js'></script>
+    <script src='video_decode/pepper.js'></script>
+    <script src='audio_playback/common.js'></script>
+    <script src='audio_playback/pepper.js'></script>
 
     <script src='screen.js'></script>
 
@@ -334,6 +336,7 @@
     </div>
 
     <div id='listener'></div>
+    <div id='listener2'></div>
     <div class='overlay' id='dead'>
       <img src='dead-mac.png' alt='dead'>
     </div>
