--- a/public/app/list.html
+++ b/public/app/list.html
@@ -278,7 +278,7 @@
             <span id='account-management-info'></span><span> </span><a id='account-management' target='_blank'></a>
           </p>
         </div>
-        <div id='desktop-app'><p><a href='https://vysor.io/download' target='_blank'>Get the standalone Vysor desktop app for better performance!</a></p></div>
+        <div id='desktop-app'><p><a href='https://vysor.io/download' target='_blank' style="color: red;">WARNING: Google is removing Chrome apps in March 2020. Download the desktop version of Vysor.</a></p></div>
       </div>
       <div class='this-pads-the-footer-so-it-scrolls' style='min-height: 50px'></div>
       <div class="navbar navbar-default navbar-fixed-bottom">
