Revert "update browser link"
This reverts commit 47f741d0cab908ce1a10f85af8b6381f085cf5e2.

--- a/public/download/index.html
+++ b/public/download/index.html
@@ -78,7 +78,7 @@
 						<li><a id='windows' href="javascript:installAndClose('win32')" class="button icon fa-windows">Windows</a></li>
 						<li><a id='mac' href="javascript:installAndClose('osx')" class="button icon fa-apple">Mac</a></li>
 						<li><a id='linux' href="https://github.com/koush/vysor.io/issues/242" class="button icon fa-linux">Linux</a></li>
-						<li><a id='chrome' href="https://app.vysor.io/" class="button icon fa-chrome">Browser</a></li>
+						<li><a id=-'chrome' href="javascript:tryInlineInstall()" class="button icon fa-chrome">Chrome</a></li>
 					</ul>
 				</div>
 				<div class="image phone"><div class="inner"><img src="/images/screen.png" alt="" /></div></div>
@@ -101,6 +101,7 @@
 			<script src="/assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="/assets/js/main.js"></script>
+			<script src='/install.js'></script>
 
       <script>
         $(document).ready(function() {
