--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 		<link href="app/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="style.css" rel="stylesheet" type="text/css">
 
+		<script src='/install.js'></script>
 	</head>
 	<body id="top">
     <div class="navbar navbar-inverse">
