--- a/public/server/index.html
+++ b/public/server/index.html
@@ -61,7 +61,7 @@
 							var customProtocol = 'ec-gidgenkbbabolejbgbpnhbimgjbffefm';
 							var customLocation = newLocation.replace(/^https/, customProtocol).replace(/^http/, customProtocol);
 							protocolCheck(customLocation, function() {
-								window.location = newLocation;
+								window.location = 'https://app.vysor.io/#/deeplink/' + encodeURIComponent(window.location.href);
 							})
 
               // still here? vysor is installed!
