--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 		<title>Vysor</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="stylesheet" href="/assets/css/main.css" />
     <meta name="google-site-verification" content="NMNRE8QlDFmRd0I0WIY4eVyfE7SohaXJxJ73oGc-8fo" />
-		<link href="app/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="style.css" rel="stylesheet" type="text/css">
 
 		<script src='/install.js'></script>
@@ -201,14 +198,14 @@
 			</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.scrolly.min.js"></script>
+			<script src="/assets/js/skel.min.js"></script>
+			<script src="/assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-      <script src="magnific-dist/jquery.magnific-popup.min.js"></script>
-  		<link rel="stylesheet" href="magnific-dist/magnific-popup.css" />
+			<script src="/assets/js/main.js"></script>
+      <script src="/magnific-dist/jquery.magnific-popup.min.js"></script>
+  		<link rel="stylesheet" href="/magnific-dist/magnific-popup.css" />
 
       <script>
       $(document).ready(function() {
