--- a/purchase/index.html
+++ b/purchase/index.html
@@ -21,7 +21,7 @@
 					<p class='instructions'>Thanks for your purchase.</p>
 					<h5 class='instructions2'>Click Upgrade to Pro in the Vysor desktop or web application, and then click Retrieve License.</h5>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.png" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="/images/screen.png" alt="" /></div></div>
 			</header>
 
 		<!-- Footer -->
