--- a/server/index.html
+++ b/server/index.html
@@ -28,7 +28,7 @@
             <!-- <li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li> -->
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.png" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="/images/screen.png" alt="" /></div></div>
 			</header>
 
 		<!-- Footer -->
