--- a/redirect/index.html
+++ b/redirect/index.html
@@ -31,7 +31,7 @@
 			</ul>
 		</div>
 		<div class="image phone">
-			<div class="inner"><img src="images/screen.png" alt="" /></div>
+			<div class="inner"><img src="/images/screen.png" alt="" /></div>
 		</div>
 	</header>
 
