--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
 				</ul>
 				<p class="copyright">&copy; ClockworkMod. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 				<p><a href="VysorLicense.pdf">Software License</a></p>
+				<p><a href="/privacy">Privacy</a></p>
+
 			</footer>
 
 		<!-- Scripts -->
