--- a/redirect/index.html
+++ b/redirect/index.html
@@ -22,8 +22,8 @@
 	<header id="header">
 		<div class="content">
 			<h1><a href="#">Vysor</a></h1>
-			<p>A window to your Android</p>
-			<h5 class='instructions'>Someone is trying to share their Android screen with you.</h5>
+			<p>A window to your Phone</p>
+			<h5 class='instructions'>Someone is trying to share their Phone screen with you.</h5>
 			<h5 class='instructions2'>Open this link in Chrome or download the Vysor Chrome app to connect.</h5>
 			<ul class="actions">
 				<li><a href="javascript:openDownload()" class="button special icon fa-download">Download Vysor</a></li>
@@ -64,7 +64,7 @@
 					// still here? vysor is installed!
 					setTimeout(function() {
 						$('.actions').hide();
-						$('.instructions').text('Connecting to a shared Android device.');
+						$('.instructions').text('Connecting to a shared device.');
 						$('.instructions2').text('Vysor will open automatically.');
 					}, 5000);
 				}, 1000)
