--- a/server/index.html
+++ b/server/index.html
@@ -20,8 +20,8 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">Vysor</a></h1>
-					<p>A window to your Android</p>
-					<h5 class='instructions'>Someone is trying to share their Android devices with you.</h5>
+					<p>A window to your Phone</p>
+					<h5 class='instructions'>Someone is trying to share their devices with you.</h5>
 					<h5 class='instructions2'>Download the Vysor Chrome app to connect.</h5>
 					<ul class="actions">
 						<li><a href="javascript:openDownload()" class="button special icon fa-download">Download Vysor</a></li>
@@ -62,7 +62,7 @@
                 if (window.location.search.indexOf('close=true') != -1)
                   window.close();
                 $('.actions').hide();
-                $('.instructions').text('Connecting to shared Android devices.');
+                $('.instructions').text('Connecting to shared devices.');
                 $('.instructions2').text('Vysor will open automatically.');
               }, 5000);
             }, 1000)
