--- a/server/index.html
+++ b/server/index.html
@@ -5,61 +5,68 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Vysor</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="/assets/css/main.css" />
-		<script src='/protocolcheck.js'></script>
-		<script src='/install.js'></script>
 
-	</head>
-	<body id="top">
+<head>
+	<title>Vysor</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="/assets/css/main.css" />
+	<script src='/protocolcheck.js'></script>
+	<script src='/install.js'></script>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="content">
-					<h1><a href="#">Vysor</a></h1>
-					<p>A window to your Phone</p>
-					<h5 class='instructions'>Someone is trying to share their devices with you.</h5>
-					<h5 class='instructions2'>You can view their device using the Vysor desktop app, or continue in your browser.</h5>
-					<ul class="actions">
-						<li><a href="javascript:openDownload()" class="button special icon fa-play">Launch Vysor Desktop</a></li>
-						<li><a href="javascript:openVysor()" class="button special icon fa-play-circle">Open in Browser</a></li>
-						<li><a href="javascript:openBrowser()" class="button special icon fa-download">Download Vysor</a></li>
-					</ul>
-				</div>
-				<div class="image phone"><div class="inner"><img src="/images/screen.png" alt="" /></div></div>
-			</header>
+</head>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="https://twitter.com/vysorapp" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-				</ul>
-				<p class="copyright">&copy; ClockworkMod. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
-			</footer>
+<body id="top">
 
-		<!-- Scripts -->
-			<script src="/assets/js/jquery.min.js"></script>
-			<script src="/assets/js/jquery.scrolly.min.js"></script>
-			<script src="/assets/js/skel.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/main.js"></script>
+	<!-- Header -->
+	<header id="header">
+		<div class="content">
+			<h1><a href="#">Vysor</a></h1>
+			<p>A window to your Phone</p>
+			<h5 class='instructions'>Someone is trying to share their devices with you.</h5>
+			<h5 class='instructions2'>You can view their device using the Vysor desktop app, or continue in your
+				browser.</h5>
+			<ul class="actions">
+				<li><a href="javascript:openDownload()" class="button special icon fa-play">Launch Vysor</a></li>
+				<li><a href="javascript:openVysor()" class="button special icon fa-play-circle">Open in Browser</a></li>
+				<li><a href="javascript:openBrowser()" class="button special icon fa-download">Download Vysor</a></li>
+			</ul>
+		</div>
+		<div class="image phone">
+			<div class="inner"><img src="/images/screen.png" alt="" /></div>
+		</div>
+	</header>
 
-      <script>
-	      function openVysor() {
-		var customProtocol = 'ec-gidgenkbbabolejbgbpnhbimgjbffefm';
-		var customLocation = window.location.toString().replace(/^https/, customProtocol).replace(/^http/, customProtocol);
-		protocolCheck(customLocation, function() {
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="icons">
+			<li><a href="https://twitter.com/vysorapp" class="icon fa-twitter"><span class="label">Twitter</span></a>
+			</li>
+		</ul>
+		<p class="copyright">&copy; ClockworkMod.</p>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="/assets/js/jquery.min.js"></script>
+	<script src="/assets/js/jquery.scrolly.min.js"></script>
+	<script src="/assets/js/skel.min.js"></script>
+	<script src="/assets/js/util.js"></script>
+	<script src="/assets/js/main.js"></script>
+
+	<script>
+		function openVysor() {
+			var customProtocol = 'ec-gidgenkbbabolejbgbpnhbimgjbffefm';
+			var customLocation = window.location.toString().replace(/^https/, customProtocol).replace(/^http/, customProtocol);
+			protocolCheck(customLocation, function () {
+				window.location = 'https://app.vysor.io/#/deeplink/' + encodeURIComponent(window.location.href);
+			})
+		}
+
+		function openBrowser() {
 			window.location = 'https://app.vysor.io/#/deeplink/' + encodeURIComponent(window.location.href);
-		})
-	      }
+		}
+	</script>
 
-	      function openBrowser() {
-		window.location = 'https://app.vysor.io/#/deeplink/' + encodeURIComponent(window.location.href);
-	      }
-      </script>
+</body>
 
-	</body>
 </html>
