--- a/server/index.html
+++ b/server/index.html
@@ -27,9 +27,9 @@
 			<h5 class='instructions2'>You can view their device using the Vysor desktop app, or continue in your
 				browser.</h5>
 			<ul class="actions">
-				<li><a href="javascript:openDownload()" class="button special icon fa-play">Launch Vysor</a></li>
-				<li><a href="javascript:openVysor()" class="button special icon fa-play-circle">Open in Browser</a></li>
-				<li><a href="javascript:openBrowser()" class="button special icon fa-download">Download Vysor</a></li>
+				<li><a href="javascript:openVysor()" class="button special icon fa-play">Launch Vysor</a></li>
+				<li><a href="javascript:openBrowser()" class="button special icon fa-play-circle">Open in Browser</a></li>
+				<li><a href="javascript:openDownload()" class="button special icon fa-download">Download Vysor</a></li>
 			</ul>
 		</div>
 		<div class="image phone">
