fix company name

--- a/download/index.html
+++ b/download/index.html
@@ -88,7 +88,7 @@
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-				<p class="copyright">&copy; ClockworkMod.</p>
+				<p class="copyright">&copy; Vysor, Inc.</p>
 			</footer>
 
 		<!-- Scripts -->
