--- a/redirect/index.html
+++ b/redirect/index.html
@@ -43,7 +43,7 @@
 			<li><a href="https://twitter.com/vysorapp" class="icon fa-twitter"><span class="label">Twitter</span></a>
 			</li>
 		</ul>
-		<p class="copyright">&copy; ClockworkMod.</p>
+		<p class="copyright">&copy; Vysor, Inc.</p>
 	</footer>
 
 	<!-- Scripts -->
