--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 				<ul class="icons">
 					<li><a href="https://twitter.com/vysorapp" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				</ul>
-				<p class="copyright">&copy; ClockworkMod.</p>
+				<p class="copyright">&copy; Vysor, Inc.</p>
 				<p><a href="VysorLicense.pdf">Software License</a></p>
 				<p><a href="/privacy">Privacy</a></p>
 
