--- a/purchase/index.html
+++ b/purchase/index.html
@@ -29,7 +29,7 @@
 				<ul class="icons">
 					<li><a href="https://twitter.com/vysorapp" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				</ul>
-				<p class="copyright">&copy; ClockworkMod.</p>
+				<p class="copyright">&copy; Vysor, Inc.</p>
 			</footer>
 
 		<!-- Scripts -->
