--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="/#">Vysor</a></h1>
-					<p>A window to your Android</p>
+					<p>A window to your Phone</p>
 					<ul class="actions">
 						<li><a href="javascript:openDownload()" class="button special icon fa-download">Download</a></li>
             <li><a href="https://www.youtube.com/watch?v=qAHTini67GA" class="button icon scrolly popup-youtube">Watch the Video</a></li>
@@ -51,13 +51,13 @@
       <section id="one" class="wrapper style2 special">
         <img src='/vysor-desktop.jpg' style='width: 100%;'></img>
         <header class="major">
-          <h2>Vysor puts your Android on your desktop.<br /></h2>
+          <h2>Vysor puts your iOS or Android on your desktop.<br /></h2>
           <h3>
-          Use apps, play games, control your Android.<br /></h3>
-          <h4>A desktop or Chrome app, compatible with all operating systems.</h4>
+          Use apps, play games, control your iOS or Android.<br /></h3>
+          <h4>A desktop or web app, compatible with all operating systems.</h4>
         </header>
         <ul class="icons major">
-          <li><span class="icon fa-chrome"><span class="label">Chrome</span></span></li>
+          <li><span class="icon fa-chrome"><span class="label">Browser</span></span></li>
           <li><span class="icon fa-windows"><span class="label">Windows</span></span></li>
           <li><span class="icon fa-apple"><span class="label">Apple</span></span></li>
           <li><span class="icon fa-linux"><span class="label">Linux</span></span></li>
@@ -134,7 +134,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Mirror and Control Android</td>
+                    <td>Mirror and Control iOS/Android</td>
                     <td><span class="blue-icon fa fa-check"></span></td>
                     <td><span class="blue-icon fa fa-check"></span></td>
                   </tr>
