--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 		<!-- One -->
       <section id="one" class="wrapper style2 special">
-        <img src='/vysor-desktop.jpg' style='width: 100%;'></img>
+        <img src='/vysor-desktop-site.jpg' style='width: 100%;'></img>
         <header class="major">
           <h2>Vysor puts your iOS or Android on your desktop.<br /></h2>
           <h3>
