--- a/download/index.html
+++ b/download/index.html
@@ -74,7 +74,7 @@
 					<ul class="actions">
 						<li><a id='windows' href="javascript:installAndClose('win32')" class="button icon fa-windows">Windows</a></li>
 						<li><a id='mac' href="javascript:installAndClose('osx')" class="button icon fa-apple">Mac</a></li>
-						<li><a id='linux' href="https://github.com/koush/vysor.io/issues/242" class="button icon fa-linux">Linux</a></li>
+						<li><a id='linux' href="/download/linux" class="button icon fa-linux">Linux</a></li>
 						<li><a id='chrome' href="https://app.vysor.io/" class="button icon fa-chrome">Browser</a></li>
 					</ul>
 				</div>
