--- a/download/linux.html
+++ b/download/linux.html
@@ -41,7 +41,7 @@
 		}
 		function installAndClose(platform) {
 			var back = getUrlVars()['return']
-			var dl = 'https://vysornuts.clockworkmod.com/download/' + platform;
+			var dl = 'https://nuts.vysor.io/download/' + platform;
 			if (back && back.length) {
 				// sanitize
 				back = decodeURIComponent(back);
