Added favicon in html for website
The icon was missing for the Vysor website, so I realized that there was no link in the HTML head. I added it and hope it helps!

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
-    <meta name="google-site-verification" content="NMNRE8QlDFmRd0I0WIY4eVyfE7SohaXJxJ73oGc-8fo" />
+    		<meta name="google-site-verification" content="NMNRE8QlDFmRd0I0WIY4eVyfE7SohaXJxJ73oGc-8fo" />
 		<link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="style.css" rel="stylesheet" type="text/css">
-
+		<link rel="icon" type="image/x-icon" href="/icon.ico"/>
 		<script src='/install.js'></script>
 	</head>
 	<body id="top">
